import public "base.proto";

package bbproto;

//-------------------------------------------------
message EventDataParam {
	optional string			key					= 1;
	optional int32			iValue				= 2;
	optional float			fValue				= 3;
	optional string			sValue				= 4;
}

message EventData {
	optional string			eventId				= 1;
	optional int32			iValue				= 2;
	optional float			fValue				= 3;
	optional string			sValue				= 4;
	repeated EventDataParam	values				= 5;
}

message ReqUploadStat {
    optional ProtoHeader	header				= 1;
	repeated EventData		events				= 2; // list of EventData
}

message RspUploadStat {
	optional ProtoHeader	header				= 1;
    optional uint32         serverTime			= 2;
}


//-------------------------------------------------
message ReqGetServerTime {
    optional ProtoHeader	header				= 1;
}

message RspGetServerTime {
	optional ProtoHeader	header				= 1;
    optional uint32         serverTime			= 2;
}

